# raspberry-pi-pico-w

./: .gitignore  .gitmodules  README.md  i2c-noodle-russian.py  main.py  wifi-blink.py
access-point/: CMakeLists.txt  access-point.cpp  picow_access_point.c
access-point/dnsserver/: dnsserver.c
blink/: CMakeLists.txt  blink.c  build
callgraph/: callgraph  callgraph-gcc.dot  callgraph.dot  dft  pipeline.txt  subgraph.dot  subgraph.gvpr
co2/: CMakeLists.txt  README.md  build  co2.c  co2.cpp  monitor  sweep.c
co2-server/: co2-server.py
co2-seven-segment/: CMakeLists.txt  co2-seven-segment.cpp
coroutines/: CMakeLists.txt  coroutines.cpp  debug.h  lwipopts.h  picoro.h  scd4x.h
coroutines/lwipopts/: lwipopts.h
coroutines/picoro/: coroutine.h  debug.h  event_loop.h  sleep.h  tcp.h
coroutines/picoro/drivers/: scd4x.h
dht22/: CMakeLists.txt  dht.cpp  dht.h  dht.pio  dht22.cpp  dht22.h
dht22/dht-pio/: CMakeLists.txt  dht.c
dht22/dht-pio/include/dht-pio/: dht.h
flash/: CMakeLists.txt  README.md  flash.cpp
images/: Makefile  draw-labels
led-server/: led-server.py
pico2w-blink/: CMakeLists.txt  blink.cpp
pico2w-blink/lwipopts/: lwipopts.h
pico2w-server/: CMakeLists.txt  server.cpp
pico2w-server/lwipopts/: lwipopts.h
server/: CMakeLists.txt  response.h  server.cpp
seven-segment/: CMakeLists.txt  main.py  seven-segment.cpp
seven-segment/.cache/clangd/index/: seven-segment.cpp.69D5368C3BEF0AC2.idx
trials-and-tribulations/: scd41.md
